Fix memory leak with theme update using signals Update to lit 3.3 Add gap to split pane

--- a/src/components/split-pane/split-pane.scss
+++ b/src/components/split-pane/split-pane.scss
@@ -6,6 +6,10 @@
   background-color: rgb(var(--zn-border-color));
 }
 
+:host([gap]) {
+  gap: var(--zn-spacing-medium);
+}
+
 ::slotted(*) {
   display: flex;
   flex-direction: column;
